--- a/BMtool.Application/BMtool.Application.csproj
+++ b/BMtool.Application/BMtool.Application.csproj
@@ -10,8 +10,10 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
     <PackageReference Include="JustMock" Version="2023.1.117.1" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.11" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
   </ItemGroup>
 
   <ItemGroup>
