--- a/BMtool.Infrastructure/BMtool.Infrastructure.csproj
+++ b/BMtool.Infrastructure/BMtool.Infrastructure.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="EPPlus" Version="6.2.4" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="JustMock" Version="2023.1.117.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
